<resources>
    <string name="app_name">MobilFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Final Projesi</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_create_group">Grup Oluştur</string>
    <string name="menu_add_member">Gruba Üye Ekle</string>
    <string name="menu_create_message">Mesaj Oluştur</string>
    <string name="menu_send_message">Mesaj Gönder</string>
    <string name="menu_logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>