<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobilfinal.ui.home.HomeFragment"
        android:label="@string/menu_create_group"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mobilfinal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_add_member"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobilfinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_create_message"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sendMessage"
        android:name="com.example.mobilfinal.ui.messageSend.MessageSendFragment"
        android:label="@string/menu_send_message"
        tools:layout="@layout/fragment_message_send" />


</navigation>

